<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Care Coordinator</string>
    <string name="msg_empty_phone_number">Phone number cannot be empty</string>
    <string name="msg_primary_number_empty">Primary alert phone is not set</string>
    <string name="msg_secondary_number_empty">Secondary alert phone is not set</string>

    <!-- Alert -->
    <string name="alertconf_primary_num">Primary Number</string>
    <string name="alertconf_secondary_num">Secondary Number</string>
    <string name="alertconf_alert_options">Alert Options</string>
    <string name="alertconf_call">Call</string>
    <string name="alertconf_text">Text</string>
    <string name="btn_alert">ALERT</string>
    <string name="btn_back">&lt;</string>
    <string name="dialog_alert_cfm_title">Alert</string>
    <string name="dialog_alert_cfm_call_text">Make an alert call and Send a message?</string>
    <string name="dialog_alert_cfm_call">Make an alert call?</string>
    <string name="dialog_alert_cfm_text">Send a message?</string>
    <string name="dialog_alert_cfm_none">Check at least one in Call and Text?</string>
    <string name="dialog_alert_secondary">Got helped? If not, you can choose to make an alert call to the primary or secondary number</string>
    <string name="dialog_alert_primary_again">Primary</string>
    <string name="dialog_alert_secondary_again">Secondary</string>
    <string name="dialog_add_contact_input">Input a number:</string>
    <string name="dialog_add_contact_or">Or:</string>
    <string name="dialog_delete_contact_title">Delete contact</string>
    <string name="dialog_delete_contact_msg">Delete this contact?</string>
    <string name="btn_add_contact_import">Select from contacts</string>
    <string name="alertconf_phone_unset">(unset)</string>

    <!-- Contact -->
    <string name="btn_add_sign"> + </string>
    <string name="btn_minus_sign"> - </string>
    <string name="btn_import">Import</string>
    <string name="dialog_add_contact_title">Add New Contact</string>
    <string name="dialog_contact_name">Name</string>
    <string name="dialog_contact_phone">Phone</string>

    <!-- Pick from contacts -->
    <string name="title_contacts">Contacts</string>
    <string name="title_pick_from_contacts">Pick a phone number from contacts</string>

    <!-- DrugReminder -->
    <string name="add">+</string>
    <string name="drugs">Drug List</string>
    <string name="title_activity_druglist">Druglist</string>
    <string name="nextapp">Next Appointment in: 5 days</string>
    <string name="nextrefill">Next Refill in: 5 days</string>
    <string name="addappt">Add Appointment</string>

    <!-- Friends -->
    <string name="dialog_title_friends">Prompt</string>
    <string name="dialog_friends_facebook_page">Go to %s\'s facebook page?</string>
    <string name="deleteappt">Delete appointment</string>

    <!-- Medicine Schedule -->
    <string name="medschedule_empty">No medicines are scheduled</string>
    <string name="medschedule_add">New Schedule</string>
    <string name="medschedule_track">Track Medicine</string>
    <string name="medschedule_choose_med_title">Choose your medicine</string>
    <string name="next">next</string>
    <string name="choose">Choose From Medicine List :</string>
    <string name="title_activity_add_reminder">Add Medicine</string>
    <string name="title_activity_add_time">Time &amp; Days</string>
    <string name="title_activity_add_duration">Duration</string>
    <string name="title_activity_add_summary">Summary</string>
    <string name="startday">Start Date :</string>
    <string name="hour">Hours</string>
    <string name="days">Days</string>
    <string name="tname">name</string>
    <string name="tform">form</string>
    <string name="tusage">usage</string>
    <string name="tcontent">content</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="medicine">Medicine</string>
    <string name="confirm">Confirm</string>
    <string name="Duration">duration</string>
    <string name="schedule">SCHEDULE</string>
    <string name="history">HISTORY</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <!-- New Schedule -->
    <string name="title_new_schedule">New Schedule</string>
    <string name="set_schedule_title">Set medicine schedule:</string>
    <string name="set_schedule_med_info">Medicine Info</string>
    <string name="set_schedule_take_time">Take Time</string>
    <string name="set_schedule_take_time_hint">Pick the time in a day that you want to take medicine\nLong press buttons to determine the exact time</string>
    <string name="set_schedule_take_time_suggest">This medicine suggests you take %d time(s) a day</string>
    <string name="set_schedule_take_days_everyday">This medicine suggests you take every day</string>
    <string name="set_schedule_take_days_week">This medicine suggests you take %d time(s) a week</string>
    <string name="set_schedule_duration_sugg_continuous">This medicine suggests you take continuously</string>
    <string name="set_schedule_duration_sugg_days">This medicine suggests you take for %d days</string>
    <string name="set_schedule_day_interval">Day Interval</string>
    <string name="set_schedule_duration">Duration</string>
    <string name="set_schedule_every_day">Every day</string>
    <string name="set_schedule_pick_days">Pick days</string>
    <string name="set_schedule_continuous">Continuous</string>
    <string name="set_schedule_pick_days">Pick days</string>
    <string name="set_schedule_continuous">Coutinuous</string>
    <string name="set_schedule_setduration">Set duration</string>
    <string name="dialog_title_error">Error</string>
    <string name="msg_no_take_hours">Please select at least 1 take time</string>
    <string name="msg_no_take_days">Please select at least 1 take day</string>
    <string name="dialog_title_remove_schedule">Remove</string>
    <string name="msg_remove_schedule">Remove this schedule?</string>
    <string name="schedule_state_no_today">No schedule today</string>
    <string name="schedule_state_ended">Schedule ended</string>
    <string name="schedule_state_next">&lt;font color=\"#f06d36\">Next time to take: %s&lt;/font></string>
    <string name="schedule_state_finished">&lt;font color=\"#00b050\">Today\'s schedule finished&lt;/font></string>

    <!-- Take medicine -->
    <string name="title_take_medicine">Take Medicine</string>
    <string name="take_medicine_schedule_info">Schedule Info</string>
    <string name="take_medicine_created_at">Created at: %s</string>
    <string name="take_medicine_hours_to_take">Hours to take: %s</string>
    <string name="take_medicine_days_to_take">Days to take: %s</string>
    <string name="take_medicine_duration">Duration: %s</string>
    <string name="take_medicine_schedule_status">Schedule Status</string>
    <string name="take_medicine_tracking">Tracking</string>
    <string name="take_medicine_tracking_info">Track your conformity to the schedule</string>
    <string name="btn_take">Take</string>
    <string name="duration_days">%d day(s)</string>
    <string name="duration_continuous">Continuous</string>
    <string name="not_taken">Not taken</string>
    <string name="taken_at">Taken at %s</string>
    <string name="take_medicine_schedule_today">Today\'s schedule:</string>
    <string name="dialog_title_take_med">Take Medicine</string>
    <string name="dialog_msg_take_med">Are you sure?</string>
    <string name="history_empty">No medicine history</string>
    <string name="history_taken_at">Taken at: %s</string>
    <string name="history_planned">Planned take time: %s</string>
    <string name="history_ontime">On time</string>
    <string name="history_late">Late for %s</string>
    <string name="reminder_title">Medicine Reminder</string>
    <string name="reminder_ticker">Time to take your medicine!</string>
    <string name="reminder_text">Take medicine: %1$s</string>

    <!-- Appointment -->
    <string name="appointment_empty">No appointment</string>
    <string name="btn_appointment_new">New Appointment</string>
    <string name="title_appointment_new">New Appointment</string>
    <string name="appointment_new_date">Date</string>
    <string name="appointment_new_time">Time</string>
    <string name="appointment_new_remind">Remind Before</string>
    <string name="appointment_detail">Detail</string>
    <string name="appointment_detail_hint">Appointment Detail</string>
    <string name="appointment_status_1day">1 day</string>
    <string name="appointment_status_days">%d days</string>
    <string name="appointment_status_today">Today</string>
    <string name="appointment_status_passed">Passed</string>
    <string name="dialog_title_remove_appointment">Remove</string>
    <string name="msg_remove_appointment">Remove this appointment?</string>
    <string name="appointment_reminder_title">Appointment Reminder</string>
    <string name="appointment_reminder">Appointment reminder: %s</string>
    <string name="appointment_item_remind">Remind: %s</string>
    <string name="appointment_item_detail">Detail: %s</string>

    <!-- Games -->
    <string name="games_installed">Installed</string>
    <string name="dialog_game_market">You haven\'t installed this game. Would you like to go to the market to download it?</string>
    <string name="dialog_game_launch">Launch this game?</string>
    <string name="title_activity_track">Track</string>

	<!-- Track -->
	<string name="track">Track Medicine</string>
</resources>
