<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddSummaryActivity" >

    <TextView
        android:id="@+id/summary1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/medicine"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/summary4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/summary3"
        android:layout_marginTop="63dp"
        android:text="@string/days"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary4"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="72dp"
        android:layout_toRightOf="@+id/summary3"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/back_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirm"
        android:layout_alignLeft="@+id/summary3"
        android:text="@string/back" />

    <TextView
        android:id="@+id/summary3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/summary4"
        android:layout_below="@+id/summary1"
        android:layout_marginTop="99dp"
        android:text="@string/hour"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/summary2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/summary1"
        android:layout_marginTop="34dp"
        android:text="@string/Duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
