<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@android:color/white"
	    android:text="@string/tname" />
	
	<EditText
	    android:id="@+id/drug_name_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true" />
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textColor="@android:color/white"
	    android:text="@string/tform" />
	
	<EditText
	    android:id="@+id/drug_form_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textColor="@android:color/white"
	    android:text="@string/tusage" />
	
	<EditText
	    android:id="@+id/drug_usage_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textColor="@android:color/white"
	    android:text="@string/tcontent" />
	
	<EditText
	    android:id="@+id/drug_content_edittext"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:singleLine="true" />
</LinearLayout>
